styles.css
/*
// This file is part of Moodle - http://moodle.org/
//
// Moodle is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// Moodle is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with Moodle.  If not, see <http://www.gnu.org/licenses/>.
*/

/**
* Provides all CSS styles for the AJAX Marking block
*
* @package    block
* @subpackage ajax_marking
* @copyright  2007 Matt Gibson
* @author     Matt Gibson
* @link       http://moodle.org/user/view.php?id=81450
* @license    http://www.gnu.org/copyleft/gpl.html GNU GPL v3 or later
*/

.nodecount .recent {
    color: #00ad08;
}
.nodecount .medium {
    color: #ff6c00;
}
.nodecount .overdue {
    color: #ff000a;
}
.nodecount {
    margin: auto;
}
#loader {
    position: relative;
    top: 3px;
    right: 0;
    float: left;
    z-index: 100;
    margin: 0;
    padding: 0;
}
#hidden-icons {
    display: none;
}
#totalmessage {
    float: left;
    padding-bottom: 2px;
    margin-left: 3px;
}
.loaderimage {
    background: url([[pix:block_ajax_marking|ajax-loader]]) 0 0 no-repeat;
    width: 15px;
    height: 15px;
    display: block;
}
#count {
    font-weight: bold;
}
#mainicon {
    float: left;
    margin-left: 8px;
}

/* change tree loading icon. Standard one has white background and looks bad on some themes */
.ygtvloading {
    width: 18px;
    height: 22px;
    background: url([[pix:block_ajax_marking|ajax-loader]]) 0 0 no-repeat;
}
#block_ajax_marking_hidden {
    display: none;
}

#page-blocks-ajax_marking-actions-grading_popup #page-content #region-main .region-content {
    padding: 0 10px;
}
#treetabs {
    clear: both;
}
#coursestreetab {
    background: url([[pix:core|c/course]]) no-repeat 50%;
    width: 35px;
    height: 25px;
    position: absolute;
    float: left;
    z-index: 100;
}
#block_ajax_marking_error {
    display: none;
    color: #000000;
    background-color: #ff6666;
    overflow-x: scroll;
    border: 1px solid #000;
    padding: 3px;
    width: 100%;
}

/* Context menu */
#configcontextmenu .inherited .yuimenuitemlabel,
#maincontextmenu .inherited .yuimenuitemlabel {
    color: #999999;
}
#configcontextmenu .inherited.yuimenuitem-checked,
#maincontextmenu .inherited.yuimenuitem-checked {
    background-image: url("../../lib/yui/2.9.0/build/assets/skins/sam/menuitem_checkbox_disabled.png");
    color: #999999;
}

/* Node icons for the config tree */
.block_ajax_marking_node_icon {
    width: 20px;
}

.block_ajax_marking_spacer {
    clear: both;
}
.block_ajax_marking_groups_icon {
    vertical-align: top;
    font-size: 9pt;
}
td.block_ajax_marking_groups_icon span.yui-button button {
    min-height: 0;
    line-height: normal;
    padding-left: 0;
}

/* Keeps the icons from being off centre */
td.ygtvcell {
    line-height: 1;
}
img.dynamicicon {
    float: left;
}
div.nodelabel {
    display:block;
    white-space: nowrap;
    overflow-x: hidden;
    overflow-y: visible;
    text-overflow: ellipsis;
}
div.nodecount {
    margin: 0 2px;
    float: left;
}
/* Keeps the nodes within the block at a uniform length */
table.ygtvtable {
    width: 100%;
    table-layout: fixed;
}
.configtreenode .nodelabel {
    margin-left: 3px;
}
.configtreenode img.nodeicon {
    margin-right: 3px;
}
/* Makes the 'hide specific groups' contextmenu item go left */
/*.nocheck a.yuimenuitemlabel {*/
    /*padding-left: 10px;*/
/*}*/
/*li.nocheck.yuimenuitem {*/
    /*border-top: 1px solid #A6A6A6;*/
    /*margin-top: 3px;*/
/*}*/

